--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
          
     }
+   .footer{
+        display: box;
+        background-color: rgba(233, 236, 239, 1);
+        color: #212529;
+        text-align: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        
+    }
     .info{
         text-align: center;
         vertical-align: middle;
@@ -77,5 +87,8 @@
   </div>
         </div>
 </div>
+        <div class="footer">
+            <p>Desgin by <a href="http://linkedin.com/in/tanishk-agarwal-ab0030146">Tanishk Agarwal</a> and <a href="https://www.linkedin.com/in/rohit-bhati-410344142"> Rohit Bhati</a> and <a href="http://linkedin.com/in/pulkit-mittal-951a75175">pulkit mittal</a>.</p>
+        </div>
     </body>
 </html>
